# PACEB_6DOF_RobotArm

./: README.md
PACEB1_CAD/: PACEB_Jaw1.SLDPRT  PACEB_Jaw2.SLDPRT  PACEB_base_link.SLDPRT  PACEB_link_1.SLDPRT  PACEB_link_2.SLDPRT  PACEB_link_3.SLDPRT  PACEB_link_4.SLDPRT  PACEB_link_5.SLDPRT  PACEB_link_6.SLDPRT
PACEB_ROS2/src/: github.txt
PACEB_ROS2/src/moveit_servo/src/teleop_demo/: joystick_servo_example.cpp
PACEB_ROS2/src/nick_bot/: CMakeLists.txt  package.xml
PACEB_ROS2/src/nick_bot/config/: moveit.rviz  nickbot_controllers.yaml  nickbot_servo_config.yaml  panda_simulated_config.yaml  step_and_serv_controllers.yaml  step_and_serv_controllersSEP.yaml
PACEB_ROS2/src/nick_bot/description/: robot.urdf.xacro  robot_core.xacro  robot_coreNOGRIPPER.xacro  ros2_control.xacro  ros2_controlGAZEBO.xacro
PACEB_ROS2/src/nick_bot/launch/: computer.launch.py  demo.py  full_launch_sim.launch.py  full_launch_simWORKING.launch.py  gazebo.launch.py  launch_sim.launch.py  moveit2_servo.launch.py  moveit_setup.launch.py  raspberry.launch.py  real_robot.launch.py  rsp.launch.py  second_try.launch.py  stepper_control.launch.py  test.launch.py
PACEB_ROS2/src/nick_bot/meshes/: EndEffector1.STL  EndEffector2.STL  base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL
PACEB_ROS2/src/nick_bot/urdf/: nick_bot.urdf
PACEB_ROS2/src/nick_bot_hw_interface/: CMakeLists.txt  nick_bot_hw_interface.xml  package.xml
PACEB_ROS2/src/nick_bot_hw_interface/include/nick_bot_hw_interface/: arduino_comm.hpp  nick_bot_hw_interface.hpp  nick_bot_hw_interfaceOLD.hpp  visibility_control.h
PACEB_ROS2/src/nick_bot_hw_interface/src/: arduino_comm.cpp  nick_bot_hw_interface.cpp  nick_bot_hw_interfaceOLD.cpp
PACEB_ROS2/src/nick_bot_moveit_config/: CMakeLists.txt  package.xml
PACEB_ROS2/src/nick_bot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  nick_bot.ros2_control.xacro  nick_bot.srdf  nick_bot.urdf.xacro
PACEB_ROS2/src/nick_bot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
moveit_servo/: CMakeLists.txt
moveit_servo/test/launch/: test_servo_collision.test.py
serial/: CMakeLists.txt  package.xml
